--- a/bib/references.bib
+++ b/bib/references.bib
@@ -46,7 +46,6 @@
 
 @article{manning_introduction_2009,
 	title = {Introduction to {Information} {Retrieval}},
-	language = {en},
 	author = {Manning, Christopher and Raghavan, Prabhakar and Schuetze, Hinrich},
 	year = {2009},
 }
@@ -81,10 +80,10 @@
 }
 
 @article{hadi_LLM_2023,
+    title = {Large Language Models: A Comprehensive Survey of its Applications, Challenges, Limitations, and Future Prospects},
     author = {Hadi, Muhammad Usman and Al-Tashi, Qasem and Qureshi, Rizwan and Shah, Abbas and Muneer, Amgad and Irfan, Muhammad and Zafar, Anas and Shaikh, Muhammad and Akhtar, Naveed and Wu, Jia and Mirjalili, Seyedali},
     year = {2023},
     month = {07},
-    title = {Large Language Models: A Comprehensive Survey of its Applications, Challenges, Limitations, and Future Prospects},
     doi = {10.36227/techrxiv.23589741}
 }
 
@@ -114,7 +113,6 @@
 @misc{noauthor_openai_nodate,
 	title = {{OpenAI} {Platform}},
 	url = {https://platform.openai.com},
-	language = {en},
 }
 
 
@@ -681,4 +679,36 @@
 	journal = {Communications in Computer and Information Science},
 	author = {Borah, B. and Pathak, D. and Sarmah, P. and Som, B. and Nandi, S.},
 	year = {2019},
+}
+
+
+@misc{jiang_mistral_2023,
+	title = {Mistral {7B}},
+	publisher = {arXiv},
+	author = {Jiang, Albert Q. and Sablayrolles, Alexandre and Mensch, Arthur and Bamford, Chris and Chaplot, Devendra Singh and Casas, Diego de las and Bressand, Florian and Lengyel, Gianna and Lample, Guillaume and Saulnier, Lucile and Lavaud, Lélio Renard and Lachaux, Marie-Anne and Stock, Pierre and Scao, Teven Le and Lavril, Thibaut and Wang, Thomas and Lacroix, Timothée and Sayed, William El},
+	month = oct,
+	year = {2023},
+}
+
+
+
+@misc{jiang_mixtral_2024,
+	title = {Mixtral of {Experts}},
+	doi = {10.48550/arXiv.2401.04088},
+	publisher = {arXiv},
+	author = {Jiang, Albert Q. and Sablayrolles, Alexandre and Roux, Antoine and Mensch, Arthur and Savary, Blanche and Bamford, Chris and Chaplot, Devendra Singh and Casas, Diego de las and Hanna, Emma Bou and Bressand, Florian and Lengyel, Gianna and Bour, Guillaume and Lample, Guillaume and Lavaud, Lélio Renard and Saulnier, Lucile and Lachaux, Marie-Anne and Stock, Pierre and Subramanian, Sandeep and Yang, Sophia and Antoniak, Szymon and Scao, Teven Le and Gervet, Théophile and Lavril, Thibaut and Wang, Thomas and Lacroix, Timothée and Sayed, William El},
+	month = jan,
+	year = {2024},
+}
+
+
+@article{liang_research_2022,
+	series = {7th {International} {Conference} on {Intelligent}, {Interactive} {Systems} and {Applications}},
+	title = {Research on {Text} {Classification} {Techniques} {Based} on {Improved} {TF}-{IDF} {Algorithm} and {LSTM} {Inputs}},
+	issn = {1877-0509},
+	doi = {10.1016/j.procs.2022.10.064},
+	journal = {Procedia Computer Science},
+	author = {Liang, Minhui and Niu, Tiansen},
+	month = jan,
+	year = {2022},
 }
