--- a/cover.tex
+++ b/cover.tex
@@ -181,7 +181,7 @@
 
 %%% OPTIONAL: Add an acknowledgement text
 %% Optional Acknowledgement text
-\Acknowledgements{Em primeiro lugar, expresso minha profunda gratidão aos meus orientadores, especialmente ao Professor João Rafael Almeida. O seu apoio foi além da orientação do projeto; guiou-me e desafiou-me ao longo de todo este processo, motivando-me a superar e enfrentar novos desafios. Agradeço também ao colaborador desta dissertação, Tiago Almeida, que sempre esteve disponível para me aconselhar e guiar no melhor caminho.
+\Acknowledgements{Em primeiro lugar, expresso minha profunda gratidão aos meus orientadores, especialmente ao Professor João Rafael Almeida. O seu apoio foi além da orientação do projeto; guiou-me ao longo de todo este processo, motivando-me a enfrentar e superar novos desafios. Agradeço também ao colaborador desta dissertação, Tiago Almeida, que sempre esteve disponível para me aconselhar e guiar no melhor caminho.
 
 A todos os meus amigos, estou imensamente grato pelo constante companheirismo e pela partilha da vida académica ao longo dos últimos anos. À Inês, um agradecimento especial pela paciência e pelo suporte incondicional.
 
