--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -186,3 +186,10 @@
     {LSR}
     {Learned Sparse Retrieval}
 \newcommand{\lsr}{\gls{lsr}}
+
+
+\newabbreviation
+    {rbac}
+    {RBAC}
+    {Rule-Based Access Control}
+\newcommand{\rbac}{\gls{rbac}}
