--- a/matter.tex
+++ b/matter.tex
@@ -126,6 +126,23 @@
 
 % Setup bibliography with Biber using IEEE style for proper UTF-8 support
 \usepackage[backend=biber, style=ieee-modified, sorting=none, natbib=true, mincitenames=1, maxcitenames=2]{biblatex}
+
+% BibLaTeX numeric style.
+% \usepackage[%
+%   backend=biber,%
+%   % Print back references in the bibliography.
+%   % backref=false,%
+%   backref=true,%
+%   bibstyle=numeric,%
+%   citestyle=numeric-comp,%
+%   defernumbers=true,%
+%   hyperref=true,%
+%   maxbibnames=999,%
+%   minbibnames=1,%
+%   maxcitenames=2,%
+%   mincitenames=1,%
+%   sorting=none,natbib=true, %
+% ]{biblatex}
 \bibliography{bib/references.bib, bib/rfc.bib}
 
 % Use acronyms
