--- a/bib/references.bib
+++ b/bib/references.bib
@@ -10,10 +10,13 @@
 
 
 @inproceedings{chizhik_challenges_2020,
-	title = {Challenges of {Building} an {Intelligent} {Chatbot}},
-	author = {Chizhik, A. and Zherebtsova, Yulia},
-	year = {2020},
+  title={Challenges of Building an Intelligent Chatbot},
+  author={Anna V. Chizhik and Yulia Zherebtsova},
+  booktitle={Intelligent Memory Systems},
+  year={2020},
+  url={https://api.semanticscholar.org/CorpusID:232116755}
 }
+
 
 @inproceedings{ayanouz_smart_2020,
 	title = {A {Smart} {Chatbot} {Architecture} based {NLP} and {Machine} {Learning} for {Health} {Care} {Assistance}},
@@ -44,10 +47,14 @@
 	doi = {10.1007/978-981-15-5400-1_52},
 }
 
-@article{manning_introduction_2009,
-	title = {Introduction to {Information} {Retrieval}},
+
+@book{manning_introduction_2009,
+	title = {Introduction to Information Retrieval},
+	isbn = {0-521-86571-9},
+	url = {https://nlp.stanford.edu/IR-book/information-retrieval-book.html},
+	publisher = {Cambridge University Press},
 	author = {Manning, Christopher and Raghavan, Prabhakar and Schuetze, Hinrich},
-	year = {2009},
+	date = {2008},
 }
 
 @article{hambarde_information_2023,
@@ -65,7 +72,7 @@
 	url = {https://medium.com/@evertongomede/understanding-the-bm25-ranking-algorithm-19f6d45c6ce},
 	journal = {Medium},
 	author = {Everton Gomede},
-	month = sep,
+	month = may,
 	year = {2023},
 }
 
@@ -88,26 +95,32 @@
 }
 
 
-@article{liu_prompting_nodate,
-	title = {Prompting {Frameworks} for {Large} {Language} {Models}: {A} {Survey}},
-	journal = {ACM Comput. Surv.},
-	author = {Liu, Xiaoxia and Wang, Jingyi and Sun, Jun and Yuan, Xiaohan and Dong, Guoliang and Di, Peng and Wang, Wenhai and Wang, Dongxia},
+@misc{liu_prompting_nodate,
+      title={Prompting Frameworks for Large Language Models: A Survey}, 
+      author={Xiaoxia Liu and Jingyi Wang and Jun Sun and Xiaohan Yuan and Guoliang Dong and Peng Di and Wenhai Wang and Dongxia Wang},
+      year={2023},
+      eprint={2311.12785},
+      archivePrefix={arXiv},
 }
 
 @misc{naveed_comprehensive_2023,
-	title = {A {Comprehensive} {Overview} of {Large} {Language} {Models}},
-	publisher = {arXiv},
-	author = {Naveed, Humza and Khan, Asad Ullah and Qiu, Shi and Saqib, Muhammad and Anwar, Saeed and Usman, Muhammad and Akhtar, Naveed and Barnes, Nick and Mian, Ajmal},
-	month = nov,
+	author = {Naveed, Humza and Khan, Asad and Qiu, Shi and Saqib, Muhammad and Anwar, Saeed and Usman, Muhammad and Barnes, Nick and Mian, Ajmal},
 	year = {2023},
+	month = {07},
+	pages = {},
+	title = {A Comprehensive Overview of Large Language Models}
 }
 
-@misc{vaswani_attention_2023,
-	title = {Attention {Is} {All} {You} {Need}},
-	publisher = {arXiv},
-	author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Lukasz and Polosukhin, Illia},
-	month = aug,
-	year = {2023},
+@inproceedings{vaswani_attention_2023,
+ author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, \L ukasz and Polosukhin, Illia},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Attention is All you Need},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf},
+ volume = {30},
+ year = {2017}
 }
 
 @misc{noauthor_openai_nodate,
@@ -126,25 +139,32 @@
 	year = {2023},
 }
 
-@misc{ma_beyond_2023,
-	title = {Beyond {ChatBots}: {ExploreLLM} for {Structured} {Thoughts} and {Personalized} {Model} {Responses}},
-	publisher = {arXiv},
-	author = {Ma, Xiao and Mishra, Swaroop and Liu, Ariel and Su, Sophie and Chen, Jilin and Kulkarni, Chinmay and Cheng, Heng-Tze and Le, Quoc and Chi, Ed},
-	month = dec,
-	year = {2023},
+@inproceedings{ma_beyond_2023,
+author = {Ma, Xiao and Mishra, Swaroop and Liu, Ariel and Su, Sophie Ying and Chen, Jilin and Kulkarni, Chinmay and Cheng, Heng-Tze and Le, Quoc and Chi, Ed},
+title = {Beyond ChatBots: ExploreLLM for Structured Thoughts and Personalized Model Responses},
+year = {2024},
+isbn = {9798400703317},
+publisher = {Association for Computing Machinery},
+doi = {10.1145/3613905.3651093},
+booktitle = {Extended Abstracts of the 2024 CHI Conference on Human Factors in Computing Systems},
+articleno = {56},
+series = {CHI EA '24}
 }
 
 
 
 @inproceedings{lewis_retrieval-augmented_2020,
-	title = {Retrieval-augmented generation for knowledge-intensive {NLP} tasks},
-	isbn = {978-1-71382-954-6},
-	booktitle = {Proceedings of the 34th {International} {Conference} on {Neural} {Information} {Processing} {Systems}},
-	publisher = {Curran Associates Inc.},
-	author = {Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and Küttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rocktäschel, Tim and Riedel, Sebastian and Kiela, Douwe},
-	month = dec,
-	year = {2020},
+ author = {Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K\"{u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt\"{a}schel, Tim and Riedel, Sebastian and Kiela, Douwe},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {H. Larochelle and M. Ranzato and R. Hadsell and M.F. Balcan and H. Lin},
+ pages = {9459--9474},
+ publisher = {Curran Associates, Inc.},
+ title = {Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2020/file/6b493230205f780e1bc26945df7481e5-Paper.pdf},
+ volume = {33},
+ year = {2020}
 }
+
 
 @misc{gao_retrieval-augmented_2023,
 	title = {Retrieval-{Augmented} {Generation} for {Large} {Language} {Models}: {A} {Survey}},
@@ -221,8 +241,15 @@
 
 
 @article{mitra_introduction_nodate,
-	title = {An {Introduction} to {Neural} {Information} {Retrieval}},
-	author = {Mitra, Bhaskar and Craswell, Nick},
+year = {2018},
+volume = {13},
+journal = {Foundations and Trends® in Information Retrieval},
+title = {An Introduction to Neural Information Retrieval},
+doi = {10.1561/1500000061},
+issn = {1554-0669},
+number = {1},
+pages = {1-126},
+author = {Bhaskar Mitra and Nick Craswell}
 }
 
 
@@ -236,13 +263,21 @@
 }
 
 
-@misc{chang_language_2023,
-	title = {Language {Model} {Behavior}: {A} {Comprehensive} {Survey}},
-	publisher = {arXiv},
-	author = {Chang, Tyler A. and Bergen, Benjamin K.},
-	month = aug,
-	year = {2023},
+
+@article{chang_language_2023,
+    author = {Chang, Tyler A. and Bergen, Benjamin K.},
+    title = "{Language Model Behavior: A Comprehensive Survey}",
+    journal = {Computational Linguistics},
+    volume = {50},
+    number = {1},
+    pages = {293-350},
+    year = {2024},
+    month = {03},
+    issn = {0891-2017},
+    doi = {10.1162/coli_a_00492},
+    url = {https://doi.org/10.1162/coli\_a\_00492},
 }
+
 
 
 @misc{yao_react_2023,
@@ -330,15 +365,23 @@
 }
 
 
-
-@misc{devlin_bert_2018,
-	title = {{BERT}: {Pre}-training of {Deep} {Bidirectional} {Transformers} for {Language} {Understanding}},
-	journal = {arXiv.org},
-	author = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
-	month = oct,
-	year = {2018},
+@inproceedings{devlin_bert_2018,
+    title = "{BERT}: Pre-training of Deep Bidirectional Transformers for Language Understanding",
+    author = "Devlin, Jacob  and
+      Chang, Ming-Wei  and
+      Lee, Kenton  and
+      Toutanova, Kristina",
+    editor = "Burstein, Jill  and
+      Doran, Christy  and
+      Solorio, Thamar",
+    booktitle = "Proceedings of the 2019 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long and Short Papers)",
+    month = jun,
+    year = "2019",
+    address = "Minneapolis, Minnesota",
+    publisher = "Association for Computational Linguistics",
+    doi = "10.18653/v1/N19-1423",
+    pages = "4171--4186",
 }
-
 
 
 @article{weizenbaum_elizacomputer_1966,
@@ -370,10 +413,21 @@
 }
 
 
-@misc{min_recent_pretrained,
-	title = {Recent {Advances} in {Natural} {Language} {Processing} via {Large} {Pre}-trained {Language} {Models}: {A} {Survey} {\textbar} {ACM} {Computing} {Surveys}},
-	author = {Min, Bonan and Ross, Hayley and Sulem, Elior and Veyseh, Amir and Nguyen, Thien and Sainz, Oscar and Agirre, Eneko and Heintz, Ilana and Roth, Dan}
+@article{min_recent_pretrained,
+author = {Min, Bonan and Ross, Hayley and Sulem, Elior and Veyseh, Amir Pouran Ben and Nguyen, Thien Huu and Sainz, Oscar and Agirre, Eneko and Heintz, Ilana and Roth, Dan},
+title = {Recent Advances in Natural Language Processing via Large Pre-trained Language Models: A Survey},
+year = {2023},
+issue_date = {February 2024},
+publisher = {Association for Computing Machinery},
+volume = {56},
+number = {2},
+issn = {0360-0300},
+doi = {10.1145/3605943},
+journal = {ACM Comput. Surv.},
+month = {sep},
+articleno = {30},
 }
+
 
 
 @article{church_emerging_2023,
@@ -407,11 +461,12 @@
 
 
 @inproceedings{mussa_forestqb_2022,
-	title = {{ForestQB}: {An} {Adaptive} {Query} {Builder} to {Support} {Wildlife} {Research}},
-	author = {Mussa, O. and Rana, O. and Goossens, B. and Orozco-TerWengel, P. and Perera, C.},
-	year = {2022},
+      title={ForestQB: An Adaptive Query Builder to Support Wildlife Research}, 
+      author={Omar Mussa and Omer Rana and Benoît Goossens and Pablo Orozco-terWengel and Charith Perera},
+      year={2022},
+      eprint={2210.02640},
+      archivePrefix={arXiv},
 }
-
 
 @inproceedings{reis2024flowise,
   title="{Using Flowise to Streamline Biomedical Data Discovery and Analysis}",
@@ -474,13 +529,6 @@
       author={Teknium and theemozilla and karan4d and huemin\_art}
 }
 
-@article{jiang2024a,
-  title = {Mixtral of experts},
-  author = {Jiang, Albert Q. and others},
-  year = {2024},
-  month = jan,
-  journal = {arXiv:2401.04088},
-}
 
 
 @article{rogers2021clinical,
@@ -683,13 +731,12 @@
 
 
 @misc{jiang_mistral_2023,
-	title = {Mistral {7B}},
-	publisher = {arXiv},
-	author = {Jiang, Albert Q. and Sablayrolles, Alexandre and Mensch, Arthur and Bamford, Chris and Chaplot, Devendra Singh and Casas, Diego de las and Bressand, Florian and Lengyel, Gianna and Lample, Guillaume and Saulnier, Lucile and Lavaud, Lélio Renard and Lachaux, Marie-Anne and Stock, Pierre and Scao, Teven Le and Lavril, Thibaut and Wang, Thomas and Lacroix, Timothée and Sayed, William El},
-	month = oct,
-	year = {2023},
+      title={Mistral 7B}, 
+      author={Albert Q. Jiang and Alexandre Sablayrolles and Arthur Mensch and Chris Bamford and Devendra Singh Chaplot and Diego de las Casas and Florian Bressand and Gianna Lengyel and Guillaume Lample and Lucile Saulnier and Lélio Renard Lavaud and Marie-Anne Lachaux and Pierre Stock and Teven Le Scao and Thibaut Lavril and Thomas Wang and Timothée Lacroix and William El Sayed},
+      year={2023},
+      eprint={2310.06825},
+      archivePrefix={arXiv},
 }
-
 
 
 @misc{jiang_mixtral_2024,
