--- a/matter.tex
+++ b/matter.tex
@@ -89,7 +89,7 @@
   \renewcommand\listingscaption{Code Snippet}
 }
 \fvset{fontsize=\footnotesize} % Make Code blocks smaller than text
-\usepackage{csquotes}
+\usepackage[style=USenglish]{csquotes}
 
 % Add support for PDF Comments
 \usepackage{comment}
@@ -125,7 +125,7 @@
 \usepackage{todonotes}
 
 % Setup bibliography with Biber using IEEE style for proper UTF-8 support
-\usepackage[backend=biber, style=ieee-modified, sorting=none, natbib=true, mincitenames=1, maxcitenames=2]{biblatex}
+\usepackage[backend=biber, style=ieee-modified, sorting=none, natbib=true, mincitenames=1, maxcitenames=2, maxbibnames=10, minbibnames=5]{biblatex}
 
 % BibLaTeX numeric style.
 % \usepackage[%
