--- a/cover.tex
+++ b/cover.tex
@@ -212,13 +212,16 @@ Por fim, dedico este trabalho à minha família que sempre me apoiou e tornou po
 %%% Edit the Jury President information.
 %% First Member will be the President of the Jury
 
-% \JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
+\JuriMember{Professor Doutor Tomás António Mendes Oliveira e Silva}{Professor Associado da Universidade de Aveiro}
 
 %%% Repeat the above declaration for additional
 %%%  members of the jury as many times as necessary.
 %% Additional members of the Jury
 
-% \JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
+\JuriMember{Professor Doutor Rui Pedro Sanches de Castro Lopes}{Professor
+Coordenador do Instituto Politécnico de Bragança}
+
+\JuriMember{Professor Doutor João Rafael Duarte de Almeida}{Diretor do Gabinete de Cibersegurança da Universidade de Aveiro}
 
 
 
